
SET(PLUGIN_NAME OSUFlowStreamline)
SET(PLUGIN_VERSION "0.1")

SET(SM_XML GenStreamline.xml )

SET(SM_SRC
  ../../vtkOSUFlow.cxx
  )

ADD_PARAVIEW_PLUGIN(${PLUGIN_NAME} ${PLUGIN_VERSION}
  REQUIRED_ON_SERVER
  SERVER_MANAGER_XML ${SM_XML}
  SERVER_MANAGER_SOURCES ${SM_SRC}
  )

TARGET_LINK_LIBRARIES(${PLUGIN_NAME} OSUFlowVTK OSUFlow )
